<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/game_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/game_welcome_text"
        android:layout_above="@+id/game_logo"
        android:lines="1"
        android:paddingBottom="5.0dp"
        android:textSize="20.0dp" />

    <ImageView
        android:id="@id/game_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttons"
        android:maxWidth="350.0dp"
        android:maxHeight="200.0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/rps_logo" />

    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_button_text" />

        <Button
            android:id="@+id/continue_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_button_text" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button_text" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_button_text" />
    </LinearLayout>

</RelativeLayout>