<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="15.0dp"
        android:textAllCaps="true"
        android:text="@string/arena_text" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_textview"
        android:background="@color/black" />

    <TextView
        android:id="@+id/computer_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_textview"
        android:layout_centerHorizontal="true"
        android:textSize="25.0dp"
        android:textColor="@color/red"
        android:text="@string/computer_text" />

    <LinearLayout
        android:id="@+id/computer_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/computer_button_title"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/clear"
            android:text="@string/rock_button_text" />

        <Button
            android:id="@+id/paper_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/clear"
            android:text="@string/paper_button_text" />

        <Button
            android:id="@+id/scissors_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:background="@color/clear"
            android:text="@string/scissors_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_score_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/player_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_text" />

        <TextView
            android:id="@+id/player_score_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/computer_score_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/computer_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_text" />

        <TextView
            android:id="@+id/computer_score_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/round_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/begin_button"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/round_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_text" />

        <TextView
            android:id="@+id/round_num_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@id/begin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/begin_button_text" />

    <TextView
        android:id="@+id/player_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/player_button_bar"
        android:layout_centerHorizontal="true"
        android:textSize="25.0dp"
        android:text="@string/player_text" />

    <LinearLayout
        android:id="@id/player_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_type_textview"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/player_rock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/rock_button_text" />

        <Button
            android:id="@+id/player_paper_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/paper_button_text" />

        <Button
            android:id="@+id/player_scissors_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/scissors_button_text" />
    </LinearLayout>

    <TextView
        android:id="@id/game_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>